--- a/nacl-mounts/Makefile
+++ b/nacl-mounts/Makefile
@@ -1,7 +1,7 @@
 #ARCH=$1 BIT=$2
 NACL=$(NACL_PREFIX)/../bin/$(ARCH)-nacl
 CC=$(NACL)-gcc
-CFLAGS=-m$(BIT) -c -fPIC -I$(NACL_SDK_ROOT)/$(NACL_PEPPER)/include -I$(NACL_PREFIX)/include
+CFLAGS=-m$(BIT) -c -fPIC -I$(NACL_SDK_ROOT)/include -I$(NACL_PREFIX)/include
 LDFLAGS=-lpthread -shared -Wl,-soname -Wl,libfilesys.so -I$(NACL_SDK_ROOT)/include
 
 OBJS=MountManager.o KernelProxy.o PathHandle.o MainThreadRunner.o Entry.o MemMount.o MemNode.o AppEngineUrlLoader.o AppEngineMount.o AppEngineNode.o
